--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "tailwindcss": "^2.2.8"
   },
   "dependencies": {
+    "lodash.chunk": "^4.2.0",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
     "node-sass": "^5.0.0",
