--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "serve": "sirv build --port 8080 --cors --single",
     "dev": "preact watch",
     "lint": "eslint src",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "start": "preact watch"
   },
   "eslintConfig": {
     "extends": "preact",
