--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "preact watch",
     "lint": "eslint src",
     "test": "jest --watch",
-    "start": "preact watch"
+    "start": "preact watch",
+    "format": "prettier --write 'src/**/*{js,scss}'"
   },
   "eslintConfig": {
     "extends": "preact",
@@ -27,6 +28,7 @@
     "jest-preset-preact": "^1.0.0",
     "preact-cli": "^3.0.0",
     "preact-cli-tailwind": "^3.0.0",
+    "prettier": "^2.7.1",
     "sirv-cli": "1.0.3",
     "tailwindcss": "^2.2.8"
   },
