app name, icon and favicon changes

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,19 +1,19 @@
 {
-  "name": "wendler",
-  "short_name": "wendler",
+  "name": "Strength Track",
+  "short_name": "s-track",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
-  "background_color": "#fff",
-  "theme_color": "#673ab8",
+  "background_color": "#131d29",
+  "theme_color": "#fb923c",
   "icons": [
     {
-      "src": "/assets/icons/android-chrome-192x192.png",
+      "src": "/assets/icons/icon-192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/assets/icons/android-chrome-512x512.png",
+      "src": "/assets/icons/icon.png",
       "type": "image/png",
       "sizes": "512x512"
     }
