--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
     "prettier": "^2.7.1",
     "react-animate-height": "^3.1.0",
     "sirv-cli": "1.0.3",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "preact": "^10.17.1",
     "preact-render-to-string": "^6.2.1",
-    "preact-router": "^3.2.1"
+    "preact-router": "^4.1.2"
   },
   "jest": {
     "preset": "jest-preset-preact",
