added quick set add modal

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "allowUmdGlobalAccess": true,
     "noEmit": true,
     "allowJs": true,
+    "allowImportingTsExtensions": true,
     "checkJs": false,
     "skipLibCheck": true,
     "baseUrl": "./",
