--- a/package.json
+++ b/package.json
@@ -20,20 +20,16 @@
       "pre-push": "npm run lint"
     }
   },
-  "eslintConfig": {
-    "extends": "preact",
-    "ignorePatterns": [
-      "build/"
-    ]
-  },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
     "autoprefixer": "^10.4.13",
     "d3": "^7.8.2",
     "dayjs": "^1.11.2",
     "enzyme": "^3.10.0",
     "enzyme-adapter-preact-pure": "^2.0.0",
-    "eslint": "^6.0.1",
+    "eslint": "^7.32.0",
     "eslint-config-preact": "^1.1.0",
+    "eslint-plugin-compat": "^4.2.0",
     "husky": "^8.0.3",
     "jest": "^24.9.0",
     "jest-preset-preact": "^1.0.0",
