--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint-fix && npm run format",
+      "pre-commit": "npm run lint-fix && npm run format && git add .",
       "pre-push": "npm run lint"
     }
   },
