--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^7.32.0",
     "eslint-config-preact": "^1.1.0",
     "eslint-plugin-compat": "^4.2.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "jest": "^24.9.0",
     "jest-preset-preact": "^1.0.0",
