--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint-fix && npm run format && git add .",
+      "pre-commit": "lint-staged",
       "pre-push": "npm run lint"
     }
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": "echo linting && npm run lint-fix && echo formatting && npm run format",
+    "*.{scss,css}": "npm run format"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.6.0",
@@ -34,6 +38,7 @@
     "husky": "^8.0.3",
     "jest": "^24.9.0",
     "jest-preset-preact": "^1.0.0",
+    "lint-staged": "^14.0.1",
     "lodash.chunk": "^4.2.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
