--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.36.0",
     "preact": "^10.17.1",
     "preact-render-to-string": "^6.2.1",
     "preact-router": "^4.1.2"
