--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "autoprefixer": "^10.4.13",
+    "big.js": "^6.2.1",
     "d3": "^7.8.2",
     "dayjs": "^1.11.2",
     "enzyme": "^3.10.0",
@@ -43,6 +44,7 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
+    "lodash.uniq": "^4.5.0",
     "lodash.uniqby": "^4.7.0",
     "postcss": "^8.4.21",
     "preact-cli": "^3.5.0",
