--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts,tsx}": "echo linting && npm run lint-fix && echo formatting && npm run format",
-    "*.{scss,css}": "npm run format"
+    "src/**/*.{js,ts,tsx}": "echo linting && npm run lint-fix && echo formatting && npm run format",
+    "src/**/*.{scss,css}": "npm run format"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.6.0",
@@ -55,6 +55,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "framer-motion": "^11.0.5",
     "preact": "^10.17.1",
     "preact-render-to-string": "^6.2.1",
     "preact-router": "^4.1.2"
