--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "preact build",
     "serve": "sirv build --port 8080 --cors --single",
     "dev": "preact watch",
-    "lint": "eslint src",
+    "lint": "eslint src/**/*.{ts,tsx,js}",
     "lint-fix": "eslint --fix 'src/**/*.{ts,tsx,js}'",
     "test": "jest --watch",
     "start": "preact watch",
