--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "preact build",
     "serve": "sirv build --port 8080 --cors --single",
     "dev": "preact watch",
-    "lint": "eslint src/**/*.{ts,tsx,js}",
+    "lint": "eslint 'src/**/*{.ts,.tsx,.js}'",
     "lint-fix": "eslint --fix 'src/**/*.{ts,tsx,js}'",
     "test": "jest --watch",
     "start": "preact watch",
@@ -35,6 +35,7 @@
     "eslint": "^7.32.0",
     "eslint-config-preact": "^1.1.0",
     "eslint-plugin-compat": "^4.2.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "jest": "^24.9.0",
