--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "preact build",
     "serve": "sirv build --port 8080 --cors --single",
-    "dev": "preact watch",
+    "dev": "preact watch --refresh",
     "lint": "eslint 'src/**/*{.ts,.tsx,.js}'",
     "lint-fix": "eslint --fix 'src/**/*.{ts,tsx,js}'",
     "test": "jest --watch",
