--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "preact build",
     "serve": "sirv build --port 8080 --cors --single",
-    "dev": "preact watch --refresh",
+    "dev": "preact watch --port 8000 --refresh",
     "lint": "eslint 'src/**/*{.ts,.tsx,.js}'",
     "lint-fix": "eslint --fix 'src/**/*.{ts,tsx,js}'",
     "test": "jest --watch",
@@ -26,6 +26,7 @@
     "src/**/*.{scss,css}": "npm run format"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "autoprefixer": "^10.4.19",
     "big.js": "^6.2.1",
@@ -42,12 +43,7 @@
     "jest": "^24.9.0",
     "jest-preset-preact": "^1.0.0",
     "lint-staged": "^14.0.1",
-    "lodash.chunk": "^4.2.0",
-    "lodash.clonedeep": "^4.5.0",
-    "lodash.get": "^4.4.2",
-    "lodash.set": "^4.3.2",
-    "lodash.uniq": "^4.5.0",
-    "lodash.uniqby": "^4.7.0",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.38",
     "preact-cli": "^3.5.0",
     "prettier": "^2.7.1",
